<resources>
    <string name="app_name">digidrip Connect</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="Connected">Connected</string>
    <string name="Disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="Connect">Connect</string>
    <string name="Connecting">Connecting</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Scan">Scan</string>
    <string name="Stop">Stop</string>

    <string name="scanning">Scanning ...</string>
    <string name="scan">Scan</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="calibration_store_text">Raw sensor value: %d. Save?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="connected">connected</string>
    <string name="connecting">connecting</string>
    <string name="disconnected">disconnected</string>
    <string name="disconnecting">disconnecting</string>
    <string name="synchronizing">synchronizing</string>
    <string name="sync_failed">synchronization failed</string>
    <string name="undefinied">undefined</string>

    <string name="irrigation_settings">Irrigation settings:</string>
    <string name="manual">Manual</string>
    <string name="constant">Constant</string>
    <string name="hysteresis">Hysteresis</string>

    <string name="refrsh">Refresh</string>
    <string name="close">Close</string>

    <string name="Server">Server</string>
    <string name="Pending">Pending:</string>

    <string name="Battery">Battery</string>
    <string name="Temperature">Temperature</string>
    <string name="Moisture">Moisture</string>
    <string name="Actuator">Actuator</string>

    <string name="auto_scan_on">Auto. Scan: on</string>
    <string name="auto_scan_off">Auto. Scan: off</string>
    <string name="auto_sync_on">Auto. Sync: on</string>
    <string name="auto_sync_off">Auto. Sync: off</string>

    <string name="menu_mqtt_credentials">Set MQTT Credentials</string>
    <string name="menu_mqtt_connect">Connect to MQTT Broker</string>
</resources>
