<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NodeActivity"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical"
    >

    <LinearLayout
        android:id="@+id/node_sync_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/sync_time_node"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="Sync Time"
            />
        <Button
            android:id="@+id/sync_data_node"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="Sync Data"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/node_set_irrigation_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/node_sync_layout">
        >
        <TextView
            android:id="@+id/irrigation_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/irrigation_settings"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/node_set_irrigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/node_set_irrigation_text_layout">
        <ToggleButton
            android:id="@+id/irrigation_set_manual"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textOn="@string/manual"
            android:textOff="@string/manual"
            android:enabled="false"
            />
        <ToggleButton
            android:id="@+id/irrigation_set_constant"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textOn="@string/constant"
            android:textOff="@string/constant"
            android:enabled="false"
            />
        <ToggleButton
            android:id="@+id/irrigation_set_hysteresis"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textOn="@string/hysteresis"
            android:textOff="@string/hysteresis"
            android:enabled="false"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/node_set_irrigation_value_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/node_set_irrigation_layout">
        <TextView
            android:id="@+id/irrigation_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00 %"
            />
        <SeekBar
            android:id="@+id/irrigation_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="1000"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/l_node_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <ProgressBar
            android:id="@+id/pb_actuator_output"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_centerInParent="true"
            android:max="141"
            android:min="0"
            android:progress="0"
            android:progressDrawable="@drawable/circular"
            android:secondaryProgress="100"
            />

        <TableLayout
            android:id="@+id/l_node_data_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >
            <TableRow>
                <ImageView
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_thermostat"
                    android:minWidth="35dp"
                    />
                <TextView
                    android:id="@+id/tv_label_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:text="0.0"
                    />
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:text="°C"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_water_drop"
                    android:minWidth="35dp"
                    />
                <TextView
                    android:id="@+id/tv_label_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:text="0.0"
                    />
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:text="%"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_battery"
                    android:minWidth="35dp"
                    />
                <TextView
                    android:id="@+id/tv_label_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="95dp"
                    android:textAlignment="textEnd"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:text="0.0"
                    />
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:text="%"
                    />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_label_connection_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="bottom|center"
        android:layout_below="@id/l_node_data"
        android:layout_marginTop="-65dp"
        />

    <Button
        android:id="@+id/btn_node_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refrsh"
        android:layout_above="@id/btn_node_connect"
        android:enabled="false"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/btn_node_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Connect"
        />
</RelativeLayout>